using scss to build webpack build

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <h1>Hello wonderful world of webpack</h1>
+    </div>
 </body>
 <script src="./dist/main.js"></script>
 
